--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-navigation": "^3.0.4",
     "react-redux": "^5.1.1",
     "redux": "^4.0.1",
+    "redux-persist": "^5.10.0",
     "yup": "^0.26.6"
   },
   "devDependencies": {
